@@ -1,3 +1,8 @@
+2009-07-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
+	focus desynchronization doesn't cause a crash.
+
 2009-07-21  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkFont.c (TkUnderlineAngledTextLayout): [Bug 2356057]:
